feat: improve split time analyze stuff (ranking)